k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
     name: go-web-app
     labels:
      app: go-web-app

spec:
   replicas: 1
   selector:
     matchLabels:
      app: go-web-app

   template:
     metadata:
       labels:
        app: go-web-app


     spec:
      containers:
      - name: go-web-app
        image: shr1324/go-web-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
