k8s/service.yml
kind: Service
apiVersion: v1

metadata:
  name: go-web-app
  labels:
   app: go-web-app

spec:
 type: NodePort
 selector:
   app: go-web-app
 ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
