k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
 name: go-web-app
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
 ingressClassName: nginx
 rules:
 - host: go-web-app.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
        service:
         name: go-web-app
         port:
           number: 80
